# cog-group-convo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  captions.json  captions.py  captions_thread.py  client.py  common.py  dummy.py  installation.sh  main.cpp  main.py  merge_vtt.py  merge_vtt_into_captions.py  orientation_reading_thread.py  package-lock.json  package.json  partition_captions.py  partition_videos_and_captions.py  requirements.txt  serial_thread.py  server.py  streaming_thread.py  tsconfig.json  videos.py  webpack.config.js
captions/: juror-a.1.vtt  juror-a.2.vtt  juror-a.3.vtt  juror-a.4.vtt  juror-a.webvtt  juror-b.1.vtt  juror-b.2.vtt  juror-b.3.vtt  juror-b.4.vtt  juror-b.vtt  juror-c.1.vtt  juror-c.2.vtt  juror-c.3.vtt  juror-c.4.vtt  juror-c.vtt  juror-c.webvtt  jury-foreman.1.vtt  jury-foreman.2.vtt  jury-foreman.3.vtt  jury-foreman.4.vtt  jury-foreman.vtt  merged_captions.1.json  merged_captions.json  merged_captions.vtt  merged_captions.webvtt
client/: constants.ts  index.ts
client/components/: caption.ts  cursorListener.ts  indicator.ts  rotate-qe.ts  rotationReader.ts  stay-below.ts
client/systems/: captions.ts  videoPlayback.ts
cmake/: FindLIBVLC.cmake
include/: AppContext.hpp  captions.hpp  experiment_setup.hpp  orientation.hpp  presentation_methods.hpp
include/glad/: glad.h.gch
libs/SDL2/src/sdl2_project-stamp/: download-sdl2_project.cmake  extract-sdl2_project.cmake  sdl2_project-urlinfo.txt
libs/SDL2_image/src/sdl2_image_project-stamp/: download-sdl2_image_project.cmake  extract-sdl2_image_project.cmake  sdl2_image_project-urlinfo.txt
libs/SDL2_image/tmp/: sdl2_image_project-cfgcmd.txt
libs/flatbuffers/docs/: header.html
libs/flatbuffers/docs/source/: doxyfile
libs/flatbuffers/kotlin/flatbuffers-kotlin/src/jvmTest/resources/: utf8_sample.txt
libs/freetype/src/freetype_project-stamp/: download-freetype_project.cmake  extract-freetype_project.cmake  freetype_project-urlinfo.txt
libs/freetype/tmp/: freetype_project-cfgcmd.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
resources/captions/: captions_main.json  captions_main.vtt  merged_captions.2.json  merged_captions.3.json
resources/videos/: split.sh
server/: index.ts
server/public/: Lowpolymesh_Eliber.compressed.glb  index.css
server/public/conference-room/: scene.compressed.gltf
server/public/conference-roundtable/: scene.compressed.gltf
server/public/human/: scene.compressed.glb  scene.glb
server/public/smartphone/: scene.gltf
server/views/: index.html
src/: Shader.h  captions.cpp  experiment_setup.cpp  main.cpp  orientation.cpp  presentation_methods.cpp
src/captions/: merged_captions.1.json  merged_captions.4.json
videos/: split.sh
